--- a/property-management/package.json
+++ b/property-management/package.json
@@ -14,6 +14,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "postcss": "^8.5.6",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "20.19.25",
     "@types/react": "19.2.7",
     "@types/react-dom": "^19",
